修正 new Integer() , new Long() , 改用 valueOf()